--- a/board/index.html
+++ b/board/index.html
@@ -22,7 +22,8 @@
 <body>
 
   <p>
-    <button onclick="window.trigger([0,lastvalue[0]+' ']);window.buildBlocks()">import</button>
+    <button id="importbutton" onclick="window.trigger([0,lastvalue[0]+' ']);window.buildBlocks()">import</button>
+    <button id="savebutton" style="display: none;" onclick="globalThis.clickReturn()">save</button>
     <input id="svgviewbox" type="text" style="width: 300px;" value="-100000 -100000 200000 200000">
     <button onclick="window.svgsizefunc=()=>0;walker.viewbox=svgviewbox.value;window.buildBlocks()">fixed viewbox</button>
     <button onclick='window.svgsizefunc=autoresizesvg;autoresizesvg()'>auto viewbox</button>
