--- a/board/LayerStack.html
+++ b/board/LayerStack.html
@@ -14,7 +14,7 @@
     <p>
         <button id="importbutton" onclick="window.trigger([0,lastvalue[0]+' ']);window.buildBlocks()">import</button>
         <button id="savebutton" style="display: none;" onclick="globalThis.clickReturn()">save</button>
-        <button onclick="window?.buildHeightCall()">计算高度</button>
+        <button onclick="window?.buildHeightCall()">计算高度以及变量名检查</button>
     </p>
     <div style="clear: both;"></div>
     <div style="float: left;">
