--- a/board/LayerStack.html
+++ b/board/LayerStack.html
@@ -26,9 +26,9 @@
         </textarea>
     </div>
     <div style="clear: both;"></div>
-    <p id="heightinfop" style="color: black;">
+    <pre id="heightinfop" style="color: black;">
         
-    </p>
+    </pre>
     <p style="color: black;">
         整平面: 未指定时, 每一层默认堆在上一个整平面上.<br>
         不基于整平面: 只放置在指定的层上.<br>
