--- a/board/LayerStack.html
+++ b/board/LayerStack.html
@@ -21,7 +21,7 @@
         <div id="blocklyDiv" style="height: 550px; width: 450px;"></div>
     </div>
     <div style="float: left;width:calc(95vw - 450px);margin-left: 0.3vw;">
-        <div id="svgoutput" style="transform: rotateX(180deg);"></div>
+        <div id="svgoutput"></div>
         <textarea name="blocklyinput" id="blocklyinput" cols="60" rows="27" spellcheck="false">
         </textarea>
     </div>
